--- a/WebApp/header.html
+++ b/WebApp/header.html
@@ -3,6 +3,7 @@
   <ul>
     <li><a href="#!/home">Home</li>
     <li><a href="#!/roles">Lista de roles</li>
+    <li><a href="#!/roles">Login</li>
   </ul>
 
 </div>
