--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -3,15 +3,15 @@
   <head>
     <title>L3M Super</title>
     <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="content/css/styles-nav.css" rel="stylesheet" type="text/css" />
+<link href="content/css/style-form.css" rel="stylesheet" type="text/css" />
     <script src="app\lib\angular.min.js"></script>
     <script src="app\lib\angular-route.min.js"></script>
+    <script src="app\lib\angular-animate.min.js"></script>
     <script src="app\app.js"></script>
   </head>
   <body>
-    <header ng-include src="'header.html'"></header>
+    <header ng-include src="'nav-bar.html'"></header>
     <main ng-view></main>
-
-
-
   </body>
 </html>
