--- a/WebApp/nav-bar.html
+++ b/WebApp/nav-bar.html
@@ -2,7 +2,15 @@
   <ul>
    <li><a href="#!/home">Inicio</a></li>
    <li><a href="#!/roles">Roles</a></li>
-   <li><a href="#!/roles">Contact</a></li>
+   <li><a href="#!/a">Contact</a></li>
+   <li><a href="#!/sucursales">Sucursales</a></li>
+   <li><a href="#!/contact">Trabajadores</a></li>
+   <li><a href="#!/contact">Proveedores</a></li>
+   <li><a href="#!/contact">Productos</a></li>
+   <li><a href="#!/contact">Compras</a></li>
+   <li><a href="#!/contact">Horario</a></li>
+   <li><a href="#!/contact">Planilla</a></li>
+
    <li style="float:right"><a class="active" href="#!/login">Login</a></li>
   </ul>
 </div>
