--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -4,7 +4,7 @@
     <title>L3M Super</title>
     <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
     <link href="content/css/styles-nav.css" rel="stylesheet" type="text/css" />
-<link href="content/css/style-form.css" rel="stylesheet" type="text/css" />
+    <link href="content/css/styles-form.css" rel="stylesheet" type="text/css" />
     <script src="app\lib\angular.min.js"></script>
     <script src="app\lib\angular-route.min.js"></script>
     <script src="app\lib\angular-animate.min.js"></script>
