--- a/WebApp-Admin/nav-bar.html
+++ b/WebApp-Admin/nav-bar.html
@@ -8,7 +8,7 @@
    <li><a href="#!/contact">Proveedores</a></li>
    <li><a href="#!/contact">Productos</a></li>
    <li><a href="#!/contact">Compras</a></li>
-   <li><a href="#!/contact">Horario</a></li>
+   <li><a href="#!/horario">Horario</a></li>
    <li><a href="#!/contact">Planilla</a></li>
 
    <li style="float:right"><a class="active" href="#!/login">Login</a></li>
