--- a/WebApp-Admin/nav-bar.html
+++ b/WebApp-Admin/nav-bar.html
@@ -1,4 +1,4 @@
-<div id="nav-bar">
+<div class="hidden-xs navbar navbar-default navbar-fixed-top" id="nav-bar">
   <ul>
    <li><a href="#!/home">Inicio</a></li>
    <li><a href="#!/roles">Roles</a></li>
