Bootstrap Home View

--- a/WebApp-Venta/nav-bar.html
+++ b/WebApp-Venta/nav-bar.html
@@ -1,4 +1,4 @@
-<div id="nav-bar">
+<div id="nav-bar" class="navbar navbar-default navbar-fixed-top">
   <ul>
     <li><a href="#!/home">Inicio</a></li>
    <li><a href="#!/home">Facturación</a></li>
