--- a/WebApp-Reportes/nav-bar.html
+++ b/WebApp-Reportes/nav-bar.html
@@ -1,4 +1,4 @@
-<div id="nav-bar">
+<div class="hidden-xs hidden-sm navbar navbar-default navbar-fixed-top" id="nav-bar">
   <ul>
     <li><a href="#!/home">Inicio</a></li>
    <li><a href="#!/productos">Lista de productos</a></li>
