Vista de proveedores

--- a/WebApp-Admin/nav-bar.html
+++ b/WebApp-Admin/nav-bar.html
@@ -4,7 +4,7 @@
    <li><a href="#!/roles">Roles</a></li>
    <li><a href="#!/sucursales">Sucursales</a></li>
    <li><a href="#!/contact">Trabajadores</a></li>
-   <li><a href="#!/contact">Proveedores</a></li>
+   <li><a href="#!/proveedores">Proveedores</a></li>
    <li><a href="#!/contact">Productos</a></li>
    <li><a href="#!/contact">Compras</a></li>
    <li><a href="#!/horario">Horario</a></li>
