--- a/WebApp-Admin/nav-bar.html
+++ b/WebApp-Admin/nav-bar.html
@@ -3,9 +3,9 @@
    <li><a href="#!/home">Inicio</a></li>
    <li><a href="#!/roles">Roles</a></li>
    <li><a href="#!/sucursales">Sucursales</a></li>
-   <li><a href="#!/contact">Trabajadores</a></li>
+   <li><a href="#!/trabajadores">Trabajadores</a></li>
    <li><a href="#!/proveedores">Proveedores</a></li>
-   <li><a href="#!/contact">Productos</a></li>
+   <li><a href="#!/productos">Productos</a></li>
    <li><a href="#!/contact">Compras</a></li>
    <li><a href="#!/horario">Horario</a></li>
    <li><a href="#!/contact">Planilla</a></li>
