--- a/WebApp-Admin/nav-bar.html
+++ b/WebApp-Admin/nav-bar.html
@@ -1,15 +1,14 @@
 <div class="hidden-xs navbar navbar-default navbar-fixed-top" id="nav-bar">
   <ul>
-   <li><a href="#!/home">Inicio</a></li>
-   <li><a href="#!/roles">Roles</a></li>
-   <li><a href="#!/sucursales">Sucursales</a></li>
-   <li><a href="#!/trabajadores">Trabajadores</a></li>
-   <li><a href="#!/proveedores">Proveedores</a></li>
-   <li><a href="#!/productos">Productos</a></li>
-   <li><a href="#!/contact">Compras</a></li>
-   <li><a href="#!/horario">Horario</a></li>
-   <li><a href="#!/contact">Planilla</a></li>
-
-   <li style="float:right"><a class="active" href="#!/login">Login</a></li>
+    <li><a href="#!/home">Inicio</a></li>
+    <li><a href="#!/roles">Roles</a></li>
+    <li><a href="#!/sucursales">Sucursales</a></li>
+    <li><a href="#!/trabajadores">Trabajadores</a></li>
+    <li><a href="#!/proveedores">Proveedores</a></li>
+    <li><a href="#!/productos">Productos</a></li>
+    <li><a href="#!/compras">Compras</a></li>
+    <li><a href="#!/horario">Horario</a></li>
+    <li><a href="#!/contact">Planilla</a></li>
+    <li style="float:right"><a class="active" href="#!/login">Login</a></li>
   </ul>
 </div>
